--- a/public/frontend_assets/css/style.css
+++ b/public/frontend_assets/css/style.css
@@ -41,10 +41,23 @@ h6,
     size: 50%;
 }
 
+.kotak{
+    height: 100%; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    background-color: #F3525A;
+    padding: 3rem;
+}
+
 .btn {
     font-family: 'Barlow', sans-serif;
     font-weight: 600;
     transition: .5s;
+}
+
+.btn:hover{
+    background-color: transparent;
 }
 
 .btn-primary {
@@ -110,6 +123,8 @@ h6,
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
     color: var(--primary);
+    transform: translateY(-5px);
+    transition: all .55s ease;
 }
 
 @media (max-width: 991.98px) {
@@ -150,6 +165,11 @@ h6,
     height: 3rem;
 }
 
+.carousel-control-prev,
+.carousel-control-next:hover{
+    color:#F3525A;
+}
+
 .service-item {
     position: relative;
     overflow: hidden;
@@ -175,7 +195,9 @@ h6,
 }
 
 .service-item:hover::after {
-    bottom: -25px;
+    bottom: -1px;
+    background-image: linear-gradient(#F3525A, #eeee);
+    transition: all 300ms ease;
 }
 
 .service-item p {
@@ -255,4 +277,9 @@ h6,
 
 .blog-item:hover img {
     transform: scale(1.1);
+}
+
+.tulisan-bawah:hover{
+    transform: translateX(5px);
+    transition: all .55s ease;
 }
