--- a/public/frontend_assets/scss/_header.scss
+++ b/public/frontend_assets/scss/_header.scss
@@ -459,7 +459,7 @@
 	height: 100%;
 	left: 0px;
 	width: 415px;
-	background: red;
+	background: #ff5e14;
 	clip-path: polygon(0% 0, 87% 0%, 100% 100%, 0% 100%);
 }
 .header-shape::after {
@@ -469,7 +469,7 @@
 	height: 100%;
 	right: 0px;
 	width: 415px;
-	background-image: red;
+	background: #ff5e14;
 	clip-path: polygon(0 0, 100% 0%, 100% 100%, 11% 100%);
 }
 
