--- a/public/frontend_assets/css/main.css
+++ b/public/frontend_assets/css/main.css
@@ -2707,7 +2707,7 @@ label {
   height: 100%;
   left: 0px;
   width: 415px;
-  background: red;
+  background: #ff5e14;
   clip-path: polygon(0% 0, 87% 0%, 100% 100%, 0% 100%);
 }
 
@@ -2718,6 +2718,7 @@ label {
   height: 100%;
   right: 0px;
   width: 415px;
+  background: #ff5e14;
   clip-path: polygon(0 0, 100% 0%, 100% 100%, 11% 100%);
 }
 
@@ -2885,7 +2886,7 @@ label {
   }
 }
 .features-02-link ul li {
-  padding-bottom: 44px;
+  padding-bottom: 23px;
 }
 .features-02-link ul li:last-child {
   padding-bottom: 0;
@@ -2917,7 +2918,7 @@ label {
   overflow: hidden;
 }
 .features-02-info h3 {
-  font-size: 20px;
+  font-size: 22px;
   margin-bottom: 12px;
 }
 .features-02-info p {
@@ -3097,7 +3098,7 @@ label {
   font-size: 20px;
 }
 .section-title h2 {
-  font-size: 30px;
+  font-size: 50px;
   margin-top: 22px;
   letter-spacing: -0.3px;
 }
@@ -3484,16 +3485,11 @@ label {
 
 .services-text {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   padding: 20px 30px 40px 30px;
   z-index: 99;
-}
-
-.services-text:hover{
-  background-image: linear-gradient(#ff5e14,#fd7e14,#ffc107);
-  transition: all .55s ease;
 }
 .services-text h1 {
   font-size: 80px;
@@ -4573,6 +4569,7 @@ label {
 
 .post-meta span {
   font-size: 12px;
+  letter-spacing: 2px;
   font-weight: 500;
   text-transform: uppercase;
   color: #6f7172;
@@ -6203,7 +6200,7 @@ ul.cat li a:hover {
 
 .slider-active .slick-arrow {
   font-size: 22px;
-  right: 6%;
+  right: 20%;
   opacity: 1;
   position: absolute;
   text-align: center;
